<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_top_layout"
    tools:context=".ui.fragments.YouTubeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back"
            app:tint="@color/black"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/fjalla_one"
            android:gravity="center"
            android:paddingStart="@dimen/tv_toolbar_padding_start"
            android:paddingEnd="@dimen/tv_toolbar_padding_end"
            android:text="@string/youtube"
            android:textColor="@color/black"
            android:textSize="18.5sp" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rl_et_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/et_url_margin"
            android:padding="@dimen/et_url_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionGo"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    android:hint="@string/put_youtube_url_here" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/image_make_qr_code_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/til_url"
                android:layout_alignEnd="@id/til_url"
                android:layout_alignBottom="@id/til_url"
                android:src="@mipmap/search"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/image_qr_code"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rl_et_url"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/button_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:backgroundTint="#6979F8"
            android:text="@string/share"
            android:textAllCaps="false"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/image_qr_code" />

        <Button
            android:id="@+id/button_print"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="#7A7B80"
            android:text="@string/print"
            android:textAllCaps="false"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/button_share" />

        <Button
            android:id="@+id/button_save_to_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="#3D4485"
            android:text="@string/save_to_gallery"
            android:textAllCaps="false"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/button_print" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>