<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.InstagramFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/back"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_back_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_tv_toolbar"
                android:fontFamily="@font/cookie"
                android:gravity="center_horizontal"
                android:text="@string/instagram"
                android:textColor="@color/black"
                android:textSize="25sp" />

        </Toolbar>

        <RelativeLayout
            android:id="@+id/rl_et_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/et_url_margin"
            android:padding="@dimen/et_url_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    android:hint="@string/enter_username_here"
                    android:imeOptions="actionGo" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/image_scan_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/til_url"
                android:layout_alignEnd="@id/til_url"
                android:layout_alignBottom="@id/til_url"
                android:src="@mipmap/search"
                tools:ignore="ContentDescription" />

        </RelativeLayout>


        <ImageView
            android:id="@+id/image_qr_code"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rl_et_url"
            tools:ignore="ContentDescription" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:backgroundTint="#6979F8"
            android:text="@string/share"
            android:textAllCaps="false"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/image_qr_code" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>